--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,11 @@
     "name": "House",
     "description": "Interactive House",
     "license": "BSD-3-Clause",
+    "minimum-stability": "alpha",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "2.2.*"
+        "zendframework/zendframework": "2.2.*",
+         "doctrine/doctrine-mongo-odm-module": "dev-master"
     },
      "config": {
         "vendor-dir": "core/vendor"
