--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     },
      "config": {
         "vendor-dir": "core/vendor"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
     }
 }
